<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.samurai.morseencoder.activities.TranslationRulesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar_translation_rules"
            layout="@layout/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/root_element_margin">

            <TextView
                android:id="@+id/translation_rules_title"
                style="@style/TitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/default_vertical_margin"
                android:text="@string/translation_title" />

            <TextView
                android:id="@+id/translation_dash_equal_dots_text"
                style="@style/BodyTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/default_vertical_margin"
                android:gravity="center_horizontal"
                android:text="@string/translation_dash_equal_dots" />

            <TextView
                android:id="@+id/translation_space_text"
                style="@style/BodyTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/default_vertical_margin"
                android:gravity="center_horizontal"
                android:text="@string/translation_space" />

            <TextView
                android:id="@+id/translation_space_letters_text"
                style="@style/BodyTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/default_vertical_margin"
                android:gravity="center_horizontal"
                android:text="@string/translation_space_letters" />

            <TextView
                android:id="@+id/translation_space_words_text"
                style="@style/BodyTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/default_vertical_margin"
                android:gravity="center_horizontal"
                android:text="@string/translation_space_words" />

            <GridLayout
                android:id="@+id/translation_alphabet_grid_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:columnCount="2"
                android:gravity="center"
                android:useDefaultMargins="true" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>