<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:id="@+id/main_toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ToolBarStyle" />

    <View
        style="@style/EditTextSeparatorStyle"
        android:id="@+id/view1"
        android:layout_height="5dp"
        android:layout_width="fill_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />

    <EditText
        style="@style/BodyTextStyle"
        android:hint="@string/hint_text"
        android:id="@+id/eng_text"
        android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:maxLines="3"
        android:minLines="3"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <View
        android:id="@+id/view"
        android:layout_height="5dp"
        android:layout_width="fill_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eng_text" />

    <EditText
        style="@style/BodyTextStyle"
        android:digits="*-. "
        android:hint="@string/hint_code"
        android:id="@+id/morse_text"
        android:inputType="textMultiLine"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:maxLines="3"
        android:minLines="3"
        android:padding="@dimen/root_element_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <View
        style="@style/EditTextSeparatorStyle"
        android:id="@+id/view2"
        android:layout_height="5dp"
        android:layout_width="fill_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/morse_text" />

    <com.google.android.material.button.MaterialButton
        style="@style/ActionButtonStyle"
        android:id="@+id/translate_button"
        android:layout_height="@dimen/translation_main_button_height"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:text="@string/btn_trns"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        style="@style/SystemInputTextStyle"
        android:id="@+id/textView2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/l_mode"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/translate_button" />

    <RadioGroup
        style="@style/CaptionTextStyle"
        android:id="@+id/radio_mode"
        android:layout_height="30dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            style="@style/CaptionTextStyle"
            android:checked="true"
            android:id="@+id/radio_encode"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:tag="encode"
            android:text="@string/r_btn_encode" />

        <RadioButton
            style="@style/CaptionTextStyle"
            android:id="@+id/radio_decode"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:tag="decode"
            android:text="@string/r_btn_decode" />
    </RadioGroup>

    <TextView
        style="@style/SystemInputTextStyle"
        android:id="@+id/cur_lang"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/cur_lang"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_mode" />

    <ImageView
        android:id="@+id/flag_image"
        android:layout_height="200dp"
        android:layout_width="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cur_lang" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/translation_rules_list"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_vertical_margin"
        android:layout_width="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flag_image"
        tools:listitem="@layout/translation_rules_list_item" />

</androidx.constraintlayout.widget.ConstraintLayout>

