<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings"
    android:tag="settings"
    android:layout_gravity="center"
    android:paddingBottom="2sp"
    android:paddingRight="2sp"
    android:paddingLeft="2sp"
    android:background="@color/colorPrimary">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/input_lang"
        android:id="@+id/settings_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="25dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/settings_title">

        <RadioButton
            android:id="@+id/radio_eng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="110dp"
            android:checked="true"
            android:tag="english"/>

        <RadioButton
            android:id="@+id/radio_rus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="120dp"
            android:tag="russian"/>

        <RadioButton
            android:id="@+id/radio_germ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="120dp"
            android:tag="german" />

    </RadioGroup>

    <TableLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/settings_title"
        android:layout_toLeftOf="@+id/radioGroup"
        android:layout_toStartOf="@+id/radioGroup">

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@id/eng_text"
                android:layout_gravity="center_vertical"
                android:textSize="20sp"
                android:textColor="@color/text_color"
                android:text="@string/l_eng"
                />

            <ImageView
                android:layout_toRightOf="@+id/eng_text"
                android:layout_width="225dp"
                android:layout_height="140dp"
                android:id="@+id/image_eng_flag"
                android:background="@drawable/eng_flag"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:layout_margin="2dp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@id/rus_text"
                android:layout_gravity="center_vertical"
                android:textSize="20sp"
                android:textColor="@color/text_color"
                android:text="@string/l_rus"
                />

            <ImageView
                android:layout_width="225dp"
                android:layout_height="140dp"
                android:id="@+id/image_rus_flag"
                android:layout_below="@+id/image_eng_flag"
                android:background="@drawable/rus_flag"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:layout_margin="2dp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@id/german_text"
                android:textSize="20sp"
                android:textColor="@color/text_color"
                android:text="@string/l_germ"
                android:layout_gravity="center_vertical"
                />

            <ImageView
                android:layout_width="225dp"
                android:layout_height="140dp"
                android:id="@+id/image_germ_flag"
                android:layout_below="@+id/image_france_flag"
                android:background="@drawable/german_flag"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:layout_margin="2dp"/>
        </TableRow>

    </TableLayout>

</RelativeLayout>